--- a/samachaarnews-fe/src/App.css
+++ b/samachaarnews-fe/src/App.css
@@ -108,6 +108,6 @@ label {
 
 .vote-position {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
 }
