--- a/samachaarnews-fe/src/App.css
+++ b/samachaarnews-fe/src/App.css
@@ -111,3 +111,11 @@ label {
   justify-content: space-evenly;
   align-items: center;
 }
+
+.articles {
+  display: flex;
+  flex-direction: column;
+  width: auto;
+  border-style: solid;
+  border-color: red;
+}
